--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,5 +14,8 @@
     "node": true,
     "es2021": true
   },
-  "root": true
+  "root": true,
+  "rules": {
+    "import/no-extraneous-dependencies": "off"
+  }
 }
