--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-import": "^2.27.5",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
+    "gulp-webp": "^4.0.1",
     "npm-check-updates": "^16.10.13"
   }
 }
