Add feature to convert png/jpeg images to webp

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "update": "ncu -u",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "convert": "gulp",
+    "watch": "gulp watch"
   },
   "keywords": [],
   "author": "",
