--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "update": "ncu -u",
     "lint": "eslint . --fix",
     "convert": "gulp",
-    "watch": "gulp watch"
+    "watch": "gulp watch",
+    "clean": "gulp clean"
   },
   "keywords": [],
   "author": "",
